# eunicode

./: CHANGELOG.md  Cargo.toml  README.md
design/: AI-guidance.md  README.md  TODO.md  relevant-crates.md
src/: convert.rs  lib.rs  main.rs  raw_bytes.rs  unicode_string.rs
