[package]
name = "eunicode"
version = "0.1.0"
edition = "2024"
authors = ["Elio Grieco <grieco@egx.com>"]
description = "A text processing CLI and library that helps sanitize text by removing the naughty bits to make strings good and safe."
readme = "README.md"
repository = "https://github.com/egrieco/eunicode"
license = "BSD-3-Clause" # https://spdx.org/licenses/
keywords = [
    "ascii",
    "text",
    "sanitization",
    "defang",
    "clipboard",
] # free text, 5 terms max
categories = ["command-line-utilities"] # https://crates.io/category_slugs
exclude = [".vscode/*", ".gitignore", ".aider*"]
# manifest field list: https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
arboard = "3.0"
atty = "0.2"
deunicode = "1.6.2"
ammonia = "4.1.0"
linkify = "0.10.0"
rustrict = "0.7.35"
limace = "0.1.1"
unicode-security = "0.1.2"
charname = "1.16.0"
