[package]
name = "eunicode"
version = "0.1.4"
edition = "2024"
authors = ["Elio Grieco <grieco@egx.com>"]
description = "A text processing CLI and library that helps sanitize text by removing the naughty bits to make strings good and safe."
readme = "README.md"
repository = "https://github.com/egrieco/eunicode"
license = "BSD-3-Clause" # https://spdx.org/licenses/
keywords = [
    "ascii",
    "text",
    "sanitization",
    "defang",
    "clipboard",
] # free text, 5 terms max
categories = ["command-line-utilities"] # https://crates.io/category_slugs
exclude = [".vscode/*", ".gitignore", ".aider*"]
# manifest field list: https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
arboard = "3.6"
deunicode = "1.6.2"
ammonia = "4.1.2"
linkify = "0.10.0"
rustrict = "0.7.38"
limace = "0.1.1"
unicode-security = "0.1.2"
charname = "1.17.0"
prettytable-rs = "0.10.0"
ucd = "0.1.1"
termwiz = "0.23.3"
